Example Lab Report

--- a/main.tex
+++ b/main.tex
@@ -69,12 +69,12 @@
 	% eigentlicher Inhalt
 	\MainMatter
 	
-	\chapter{Vorbereitungen (von \namea)}
+	\chapter{Vorbereitungen}% (von \namea)}
 	\input{./chap/chapter1.tex} \cleardoublepage
-	\chapter{Vorbereitungen (von \nameb)}
-	\input{./chap/chapter2.tex} \cleardoublepage
+	%\chapter{Vorbereitungen (von \nameb)}
+	%\input{./chap/chapter2.tex} \cleardoublepage
 	\chapter{Auswertung}
-	\input{./chap/chapter3.tex} \cleardoublepage
+	\input{./chap/chapter2.tex} \cleardoublepage
 	
 	% Anhang für mehr oder weniger interessante Rechnungen etc.
 	\Appendix
