Modified some contents of the README.

--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,17 @@
 	% Titelseite und ToC
 	\frontmatter \pagestyle{empty}
 	\begin{titlepage}
-		\centering\Huge README zur Protokollvorlage
+		\centering\Huge
+		
+		\vphantom{}
+		
+		\vspace{100px}
+		
+		README zur Protokollvorlage
+		
+		\vspace{50px}
+		
+		\large Anleitung und Erläuterungen zur LaTeX-Vorlage für Praktikumsprotokolle der physikalischen Anfängerpraktika der Fakultät für Physik, KIT.
 	\end{titlepage}
 	\clearpage
 	
