Added List of useful packages in main.tex.

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,10 @@
 %  - kitlogo.pdf (for titlepage)
 %  - lit.bib (bibtex bibliography database)
 %  - titlepage.tex (for layout of titelpage)
+% ---------------------------------------------------------------------------------------
+% Useful Supplied Packages:
+% amsmath, amssymb, mathtools, bbm, upgreek, nicefrac,
+% siunitx, varioref, booktabs, graphicx, tikz, multicol
 
 
 
