Removed bbm-package from class file (it's just commented out). This was done as this package is rather special and few people may use it. More important it requires the installation of the package texlive-fonts-extra unter Ubuntu and would have needed additional installations in Prof. Quast's VM.

--- a/include/cmds.tex
+++ b/include/cmds.tex
@@ -6,9 +6,12 @@
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
 
 \newcommand{\op}[1]{\operatorname{#1}} % just an abbrev.
-\newcommand{\NN}{\mathbbm{N}} % or change it to \mathbb if you like it better
-\newcommand{\RR}{\mathbbm{R}}
-\newcommand{\CC}{\mathbbm{C}}
+\newcommand{\NN}{\mathbb{N}} % or change it to \mathbb if you like it better
+\newcommand{\RR}{\mathbb{R}}
+\newcommand{\CC}{\mathbb{C}}
+%\newcommand{\NN}{\mathbbm{N}} % or change it to \mathbb if you like it better
+%\newcommand{\RR}{\mathbbm{R}}
+%\newcommand{\CC}{\mathbbm{C}}
 
 
 
