--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -44,7 +44,7 @@
 \usepackage{amsmath}				% lots of math packages
 \usepackage{amssymb}				% ... even more math packages
 \usepackage{mathtools}				% ...
-\usepackage{bbm}				% blackboard style fonts. You may prefer the provided \mathbbm{R} to ordinary \mathbb{R}.
+%\usepackage{bbm}				% blackboard style fonts. You may prefer the provided \mathbbm{R} to ordinary \mathbb{R}.
 \usepackage{upgreek}				% use $\uppi$ etc.
 \usepackage{nicefrac}				% use \nicefrac{1}{2} for inline text, if you want
 \usepackage{siunitx}				% package for units. Use \si{\ampere} or \SI{0.3}{\angstrom}.
