Revised version of the example lab report. Updated tables, figure places, etc.

--- a/tab/iii_1p2.tex
+++ b/tab/iii_1p2.tex
@@ -1,3 +1,9 @@
-\begin{tabular}{c|*{3}{*{1}{l}}}
-$\text{Versuch Nr.}$ & $1$ & $2$ & $3$ \\ \hline
-$N_0$ in $\si{1/s}$ & $0.40625$ & $0.25$ & $0.25625$\end{tabular}
+\begin{tabular}{rr}
+	\toprule
+	Versuch Nr. & $N_0 ~/~ \si{\per\second}$\\
+	\midrule
+	$1$ & $0{,}40625$\\
+	$2$ & $0{,}25000$\\
+	$3$ & $0{,}25626$\\
+	\bottomrule
+\end{tabular}
