--- a/tab/iii_1p3.tex
+++ b/tab/iii_1p3.tex
@@ -1,3 +1,9 @@
-\begin{tabular}{c|*{3}{*{1}{l}}}
-$\text{Versuch Nr.}$ & $1$ & $2$ & $3$ \\ \hline
-$t_{\mathrm{tot}}$ in $\si{ms}$ & $0.0561175$ & $0.133589$ & $0.101034$\end{tabular}
+\begin{tabular}{rr}
+	\toprule
+	Versuch Nr. & $t_{\mathrm{tot}} ~/~ \si{ms}$\\
+	\midrule
+	$1$ & $0{,}0561175$\\
+	$2$ & $0{,}133589$\\
+	$3$ & $0{,}101034$\\
+	\bottomrule
+\end{tabular}
