--- a/tab/iii_1p4.tex
+++ b/tab/iii_1p4.tex
@@ -1,3 +1,14 @@
-\begin{tabular}{c|*{8}{*{1}{l}}}
-$d$ in ${\si{mm}}$ & $\text{15 $\pm $ 2}$ & $\text{20 $\pm $ 2}$ & $\text{25 $\pm $ 2}$ & $\text{35 $\pm $ 2}$ & $\text{45 $\pm $ 2}$ & $55 \pm 2$ & $\text{75 $\pm $ 2}$ & $\text{105 $\pm $ 2}$ \\ \hline
-$N$ in ${\si{1/s}}$ & $\text{36 $\pm $ 5}$ & $\text{26 $\pm $ 6}$ & $\text{19 $\pm $ 3}$ & $\text{9 $\pm $ 3}$ & $\text{8 $\pm $ 2}$ & $\text{6 $\pm $ 3}$ & $\text{4 $\pm $ 2}$ & $\text{2 $\pm $ 1}$\end{tabular}
+\begin{tabular}{rr}
+	\toprule
+	$d ~/~ \si{mm}$ & $N ~/~ \si{\per\second}$\\
+	\midrule
+	$\num{15(2)}$ & $\num{36(5)}$ \\
+	$\num{20(2)}$ & $\num{26(6)}$ \\
+	$\num{25(2)}$ & $\num{19(3)}$ \\
+	$\num{35(2)}$ & $\num{9(3)}$ \\
+	$\num{45(2)}$ & $\num{8(2)}$ \\
+	$\num{55(2)}$ & $\num{6(3)}$ \\
+	$\num{75(2)}$ & $\num{4(2)}$ \\
+	$\num{105(2)}$ & $\num{2(1)}$ \\
+	\bottomrule
+\end{tabular}
