--- a/tab/iii_4p1.tex
+++ b/tab/iii_4p1.tex
@@ -1,3 +1,13 @@
-\begin{tabular}{c|*{7}{*{1}{l}}}
-$d$ in ${\si{mm}}$ & $1$ & $2$ & $5$ & $10$ & $15$ & $20$ & $25$ \\ \hline
-$N$ in ${\si{1/s}}$ & $12.597$ & $12.009$ & $10.2855$ & $7.80263$ & $6.30286$ & $4.76834$ & $3.84654$\end{tabular}
+\begin{tabular}{rr}
+	\toprule
+	$d ~/~ \si{\milli\meter}$ & $N ~/~ \si{\per\second}$\\
+	\midrule
+	$\num{1}$ & $\num{12.597}$ \\
+	$\num{2}$ & $\num{12.009}$ \\
+	$\num{5}$ & $\num{10.2855}$ \\
+	$\num{10}$ & $\num{7.80263}$ \\
+	$\num{15}$ & $\num{6.30286}$ \\
+	$\num{20}$ & $\num{4.76834}$ \\
+	$\num{25}$ & $\num{3.84654}$ \\
+	\bottomrule
+\end{tabular}
