--- a/tab/iii_4p2.tex
+++ b/tab/iii_4p2.tex
@@ -1,3 +1,14 @@
-\begin{tabular}{c|*{7}{*{1}{l}}}
-$d$ in ${\si{mm}}$ & $1$ & $2$ & $5$ & $10$ & $15$ & $20$ & $25$ \\ \hline
-$N$ in ${\si{1/s}}$ & $12.4932$ & $11.2221$ & $11.0592$ & $5.26505$ & $3.27983$ & $1.85586$ & $0.954194$\end{tabular}
+\begin{tabular}{rr}
+	\toprule
+	$d ~/~ \si{\milli\meter}$ & $N ~/~ \si{\per\second}$\\
+	\midrule
+	$\num{1}$ & $\num{12.4932}$ \\
+	$\num{2}$ & $\num{11.2221}$ \\
+	$\num{5}$ & $\num{11.0592}$ \\
+	$\num{10}$ & $\num{5.26505}$ \\
+	$\num{15}$ & $\num{3.27983}$ \\
+	$\num{20}$ & $\num{1.85586}$ \\
+	$\num{25}$ & $\num{0.954194}$ \\
+	\bottomrule
+\end{tabular}
+
