--- a/tab/iii_4p3.tex
+++ b/tab/iii_4p3.tex
@@ -1,4 +1,15 @@
-\begin{tabular}{c|*{8}{*{1}{l}}}
-$\text{Material}$ & $\text{aluminium}$ & $\text{beton}$ & $\text{blei}$ & $\text{eisen}$ & $\text{hartholz}$ & $\text{messing}$ & $\text{plexiglas}$ & $\text{trovidur}$ \\ \hline
-$\rho$ in $\unitfrac{g}{cm^3}$ & $2.71$ & $2.14$ & $11.34$ & $7.8$ & $0.68$ & $8.4$ & $1.18$ & $1.38$ \\ \hline
-$N$ in $\nicefrac{1}{s}$ & $10.4675$ & $10.0321$ & $3.84654$ & $6.73673$ & $12.434$ & $5.99962$ & $12.1929$ & $11.6378$\end{tabular}
+\begin{tabular}{rrr}
+	\toprule
+	Material & $\rho ~/~ \si{\gram\per\cm^3}$ & $N ~/~ \si{\per\second}$\\
+	\midrule
+	Aluminium & $\num{2.71}$ & $\num{10.4675}$ \\
+	Beton & $\num{2.14}$ & $\num{10.0321}$ \\
+	Blei & $\num{11.34}$ & $\num{3.84654}$ \\
+	Eisen & $\num{7.8}$ & $\num{6.73673}$ \\
+	Hartholz & $\num{0.68}$ & $\num{12.434}$ \\
+	Messing & $\num{8.4}$ & $\num{5.99962}$ \\
+	Plexiglas & $\num{1.18}$ & $\num{12.1929}$ \\
+	Trovidur & $\num{1.38}$ & $\num{11.6378}$ \\
+	\bottomrule
+\end{tabular}
+
