--- a/main.tex
+++ b/main.tex
@@ -50,9 +50,8 @@
 %\pretocmd{\chapter}{\setcounter{page}{1}}{}{}
 % um Kapitelnummerierung in Seitenzahl anzuführen.
 % \setboolean{chapWiseNumb}{true}
-
 % english oder ngerman (new german für neue deutsche Rechtschreibung statt german)
-\selectlanguage{ngerman}
+\SelectLanguage{ngerman}
 
 
 
