Added dependency descriptions in main.tex header.

--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -1,12 +1,16 @@
 \documentclass{include/protokollclass}
 % Main File - Based on protokollclass.cls
 % ---------------------------------------------------------------------------------------
-% Further files in folder ./misc/ :
-%  - cmds.tex (for macros and additional commands)
+% Further files in folder :
+%  - include/cmds.tex (for macros and additional commands)
 %  - data.tex (für Angaben zum Praktikumsprotokoll)
-%  - kitlogo.pdf (for titlepage)
+%  - include/kitlogo.pdf (for titlepage)
 %  - lit.bib (bibtex bibliography database)
-%  - titlepage.tex (for layout of titelpage)
+%  - include/titlepage.tex (for layout of titelpage)
+% ---------------------------------------------------------------------------------------
+% Useful Supplied Packages:
+% amsmath, amssymb, mathtools, bbm, upgreek, nicefrac,
+% siunitx, varioref, booktabs, graphicx, tikz, multicol
 % DIES IST EINE REDUZIERTE VERSION DER VORLAGE, UM EIN LEERES DECKBLATT ZU ERZEUGEN
 
 
