Modified some details of deckblatt.tex.

--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -23,6 +23,8 @@
 \setboolean{showannotations}{true}
 % um das Ausfüllen der Textfelder zu verhindern
 \setboolean{emptytextfields}{true}
+% english oder ngerman (new german für neue deutsche Rechtschreibung statt german)
+\SelectLanguage{ngerman}
 
 
 
@@ -32,9 +34,6 @@
 %% |    Main Document     |
 %% ------------------------
 \begin{document}
-	% english oder ngerman (new german für neue deutsche Rechtschreibung statt german)
-	\selectlanguage{ngerman}
-	
 	% PDF setup
 	\hypersetup
 	{
