Modified \MainMatter cmd to avoid involuntary blank pages after toc.
(cherry picked from commit b3595edc74c9f34755ad37261ed398ba7a5131c7)

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -286,6 +286,13 @@
 
 \newcommand{\MainMatter}
 {
+	\clearpage
+	
+	\begingroup % make sure that there is no involuntary blankpage added after toc.
+	\let\cleardoubleoddstandardpage\relax
+	\mainmatter
+	\endgroup
+	
 	\mainmatter
 	\pagestyle{fancy}
 	\renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter.\ ##1}{}}
