Changed some \FrontMatter formatting options.

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -284,6 +284,21 @@
 \newboolean{chapWiseNumb}
 \setboolean{chapWiseNumb}{false}
 
+\newcommand{\FrontMatter}
+{
+	\frontmatter
+	
+	\pagestyle{empty}
+	
+	\fancypagestyle{plain} % to ensure that toc page style is really empty (it uses \thispagestyle{plain})
+	{
+		\fancyhf{} % clear all header and footer fields
+		\fancyfoot{} % except the center
+		\renewcommand{\headrulewidth}{0pt}
+		\renewcommand{\footrulewidth}{0pt}
+	}
+}
+
 \newcommand{\MainMatter}
 {
 	\clearpage
@@ -292,6 +307,16 @@
 	\let\cleardoubleoddstandardpage\relax
 	\mainmatter
 	\endgroup
+	
+	\frontmatter \pagestyle{empty}
+	
+	\fancypagestyle{plain} % redefine chapter first page style, which is redefined by \FrontMatter
+	{
+		\fancyhf{} % clear all header and footer fields
+		\fancyfoot[C]{\thepage} % except the center
+		\renewcommand{\headrulewidth}{0pt}
+		\renewcommand{\footrulewidth}{0pt}
+	}
 	
 	\mainmatter
 	\pagestyle{fancy}
