--- a/main.tex
+++ b/main.tex
@@ -62,7 +62,8 @@
 %% ------------------------
 \begin{document}
 	% Titelseite und ToC
-	\frontmatter \pagestyle{empty}
+	\FrontMatter
+	
 	\begin{titlepage}
 		\centering\Huge
 		
@@ -76,9 +77,8 @@
 		
 		\large Anleitung und Erläuterungen zur LaTeX-Vorlage für Praktikumsprotokolle der physikalischen Anfängerpraktika der Fakultät für Physik, KIT.
 	\end{titlepage}
-	\clearpage
-	
-	\tableofcontents\thispagestyle{empty}
+
+	\tableofcontents
 	
 	
 	
