Changed some \FrontMatter formatting options.

--- a/main.tex
+++ b/main.tex
@@ -62,10 +62,11 @@
 %% ------------------------
 \begin{document}
 	% Titelseite und ToC
-	\frontmatter \pagestyle{empty}
-	\input{include/titlepage} \clearpage
+	\FrontMatter
+	
+	\input{include/titlepage} %\cleardoublepage
 
-	\tableofcontents\thispagestyle{empty}
+	\tableofcontents %\cleardoublepage
 	
 	
 	
