Updated bibliography database.

--- a/lit.bib
+++ b/lit.bib
@@ -1,9 +1,9 @@
 @BOOK{EKS07,
-	AUTHOR = {Eichler, Hans Joachim AND Kronfeldt, Heinz-Detlef AND Sahm, Jürgen},
+	AUTHOR = {Eichler, H. J. AND Kronfeldt, H.-D. AND Sahm, J.},
 	YEAR = {2007},
-	TITLE = {Das Neue Physikalische Grundpraktikum - },
-	EDITION = {},
-	ISBN = {354-0-299-688-},
+	TITLE = {Das Neue Physikalische Grundpraktikum},
+	EDITION = {Zweite, erweiterte und aktualisierte Auflage},
+	ISBN = {978-3-540-29968-4},
 	PUBLISHER = {Springer DE},
 	ADDRESS = {Berlin},
 }
@@ -12,18 +12,18 @@
 	AUTHOR = {Demtröder, W.},
 	YEAR = {2010},
 	TITLE = {Experimentalphysik 4 - Kern-, Teilchen- Und Astrophysik},
-	EDITION = {},
-	ISBN = {364-2-015-980-},
+	EDITION = {3. Auflage},
+	ISBN = {978-3-642-01598-4},
 	PUBLISHER = {Springer DE},
 	ADDRESS = {Berlin}
 }
 
 @BOOK{HW03,
-	AUTHOR = {Haken, Hermann AND Wolf, Hans C.},
+	AUTHOR = {Haken, H. AND Wolf, H. C.},
 	YEAR = {2003},
-	TITLE = {Atom- und Quantenphysik - },
-	EDITION = {},
-	ISBN = {364-2-185-193-},
+	TITLE = {Atom- und Quantenphysik : Einführung in die experimentellen und theoretischen Grundlagen},
+	EDITION = {8., aktualisierte und erw. Aufl.},
+	ISBN = {3-540-02621-5; 978-3-642-62142-0},
 	PUBLISHER = {Springer DE},
 	ADDRESS = {Berlin}
 }
