Changed Babelbib Style.

--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,7 @@
 	%%% BIBTEX
 	% Use if you want citations to appear even if they are not referenced to: \nocite{*} or maybe \nocite{Kon64,And59} for specific entries
 	% \nocite{*}
-	\bibliographystyle{dcbib}
+	\bibliographystyle{babalpha}
 	\bibliography{lit.bib}
 	
 	%%% THEBIBLIOGRAPHY
