Removed some \cleardoublepage's.

--- a/main.tex
+++ b/main.tex
@@ -79,16 +79,16 @@
 	\MainMatter
 	
 	\chapter{Vorbereitungen (von \namea)}
-	\input{./chap/chapter1.tex} \cleardoublepage
+	\input{./chap/chapter1.tex} %\cleardoublepage
 	\chapter{Vorbereitungen (von \nameb)}
-	\input{./chap/chapter2.tex} \cleardoublepage
+	\input{./chap/chapter2.tex} %\cleardoublepage
 	\chapter{Auswertung}
-	\input{./chap/chapter3.tex} \cleardoublepage
+	\input{./chap/chapter3.tex} %\cleardoublepage
 	
 	% Anhang für mehr oder weniger interessante Rechnungen etc.
 	\Appendix
 	\chapter*{\appendixname} \addcontentsline{toc}{chapter}{\appendixname} % damit der Anhang im ToC ohne Nummer erscheint. \appendixname = Appendix oder Anhang (je nach ausgewählter Sprache)
-	\input{./chap/appendix.tex} \cleardoublepage
+	\input{./chap/appendix.tex} %\cleardoublepage
 	
 	
 	
