--- a/lit.bib
+++ b/lit.bib
@@ -1,37 +1,9 @@
 @BOOK{EKS07,
-	AUTHOR = {Eichler, Hans Joachim AND Kronfeldt, Heinz-Detlef AND Sahm, Jürgen},
+	AUTHOR = {Eichler, H. J. AND Kronfeldt, H.-D. AND Sahm, J.},
 	YEAR = {2007},
-	TITLE = {Das Neue Physikalische Grundpraktikum - },
-	EDITION = {},
-	ISBN = {354-0-299-688-},
+	TITLE = {Das Neue Physikalische Grundpraktikum},
+	EDITION = {Zweite, erweiterte und aktualisierte Auflage},
+	ISBN = {978-3-540-29968-4},
 	PUBLISHER = {Springer DE},
 	ADDRESS = {Berlin},
-}
-
-@BOOK{Dem10,
-	AUTHOR = {Demtröder, W.},
-	YEAR = {2010},
-	TITLE = {Experimentalphysik 4 - Kern-, Teilchen- Und Astrophysik},
-	EDITION = {},
-	ISBN = {364-2-015-980-},
-	PUBLISHER = {Springer DE},
-	ADDRESS = {Berlin}
-}
-
-@BOOK{HW03,
-	AUTHOR = {Haken, Hermann AND Wolf, Hans C.},
-	YEAR = {2003},
-	TITLE = {Atom- und Quantenphysik - },
-	EDITION = {},
-	ISBN = {364-2-185-193-},
-	PUBLISHER = {Springer DE},
-	ADDRESS = {Berlin}
-}
-
-@UNPUBLISHED{EW11,
-      AUTHOR= {M. Elstner AND P. Weis},
-      TITLE= {Physikalische Chemie I-B: Kinetik},
-      NOTE= {Vorlesungsskript PC-I},
-      MONTH={02},
-      YEAR={2011}
 }
