Changed chapter wise numbering to default.

--- a/main.tex
+++ b/main.tex
@@ -47,9 +47,9 @@
 % um die Anmerkungen zu den Textfeldern anzeigen zu lassen
 %\setboolean{showannotations}{true}
 % um Seitenzahl in jedem Kapitel zu erneuern
-%\pretocmd{\chapter}{\clearpage\setcounter{page}{1}}{}{}
+\pretocmd{\chapter}{\clearpage\setcounter{page}{1}}{}{}
 % um Kapitelnummerierung in Seitenzahl anzuführen.
-%\setboolean{chapWiseNumb}{true}
+\setboolean{chapWiseNumb}{true}
 % english oder ngerman (new german für neue deutsche Rechtschreibung statt german)
 \SelectLanguage{ngerman}
 
