Added command to create empty chapter (e.g. Messprotokoll).
Conflicts:
	main.pdf
	main.tex

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -370,6 +370,11 @@
 	}{}
 }
 
+\newcommand{\emptychapter}[2]
+{
+	\clearpage\addtocounter{chapter}{1}\addtocontents{toc}{\protect\contentsline {chapter}{\protect\numberline {\thechapter}#1}{#2}{chapter.\thechapter}}
+}
+
 
 
 
