Added command to create empty chapter (e.g. Messprotokoll).
Conflicts:
	main.pdf
	main.tex

--- a/main.tex
+++ b/main.tex
@@ -80,6 +80,9 @@
 	
 	\chapter{Vorbereitungen}% (von \namea)}
 	\input{./chap/chapter1.tex} %\cleardoublepage
+	
+	\emptychapter{Messprotokoll}{2} % Usage: \emptychapter{name of the chapter}{page displayed in toc}
+	
 	\chapter{Auswertung}
 	\input{./chap/chapter2.tex} %\cleardoublepage
 	
