Added command to create empty chapter (e.g. Messprotokoll).

--- a/main.tex
+++ b/main.tex
@@ -82,6 +82,9 @@
 	\input{./chap/chapter1.tex} %\cleardoublepage
 	\chapter{Vorbereitungen (von \nameb)}
 	\input{./chap/chapter2.tex} %\cleardoublepage
+	
+	\emptychapter{Messprotokoll}{3} % Usage: \emptychapter{name of the chapter}{page displayed in toc}
+	
 	\chapter{Auswertung}
 	\input{./chap/chapter3.tex} %\cleardoublepage
 	
