Some modifications of the readme.

--- a/main.tex
+++ b/main.tex
@@ -76,6 +76,10 @@
 		\vspace{50px}
 		
 		\large Anleitung und Erläuterungen zur LaTeX-Vorlage für Praktikumsprotokolle der physikalischen Anfängerpraktika der Fakultät für Physik, KIT.
+		
+		\vspace{50px}
+		
+		\large v1.1.0 der Anleitung. Bezieht sich auf v1.1.0 der Vorlage.
 	\end{titlepage}
 
 	\tableofcontents
