Updated titlepage to supply an additional field for email adresses.

--- a/include/titlepage.tex
+++ b/include/titlepage.tex
@@ -45,84 +45,89 @@
 	
 	\Large
 	% Zeile 1
-	\begin{textblock}{12}[0,0](3.85,3.9)
+	\begin{textblock}{12}[0,0](3.85,3.85)
 		\mytextfield{Prak.}{\praktikum}{0.9cm}{17pt}{P1/P2}{2}{Praktikum}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](5.8,3.9)
+	\begin{textblock}{12}[0,0](5.8,3.85)
 		\mytextfield{Semester}{\semester}{2.6cm}{17pt}{z.B. \glqq WS14/15\grqq\ oder \glqq SS15\grqq}{0}{Semester}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.8,3.9)
+	\begin{textblock}{12}[0,0](9.8,3.85)
 		\mytextfield{Wochentag}{\wochentag}{1.3cm}{17pt}{Mo/Di/Mi/Do}{2}{Wochentag}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](13.15,3.9)
+	\begin{textblock}{12}[0,0](13.15,3.85)
 		\mytextfield{Gruppennr.}{\gruppennr}{1.06cm}{17pt}{\#\#}{2}{Gruppennummer}
 	\end{textblock}
 	
 	% Zeile 2
-	\begin{textblock}{12}[0,0](3.85,4.5)
+	\begin{textblock}{12}[0,0](3.85,4.4)
 		\mytextfield{Name}{\nachnamea}{6cm}{17pt}{}{0}{Name1}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.8,4.5)
+	\begin{textblock}{12}[0,0](9.8,4.4)
 		\mytextfield{Vorname}{\vornamea}{6cm}{17pt}{}{0}{Vorname1}
 	\end{textblock}
 	
-	% Zeile 2
-	\begin{textblock}{12}[0,0](3.85,5.1)
+	% Zeile 3
+	\begin{textblock}{12}[0,0](3.85,4.95)
 		\mytextfield{Name}{\nachnameb}{6cm}{17pt}{}{0}{Name2}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.8,5.1)
+	\begin{textblock}{12}[0,0](9.8,4.95)
 		\mytextfield{Vorname}{\vornameb}{6cm}{17pt}{}{0}{Vorname2}
 	\end{textblock}
 	
 	% Zeile 4
-	\begin{textblock}{12}[0,0](3.85,6.1)
-		\mytextfield{Versuch}{\versuch\ (\praktikum-\versuchsnr)}{9.45cm}{14pt}{z.B. \glqq Galvanometer (P1-13)\grqq\ oder \glqq Mikrowellenoptik (P2-15)\grqq}{0}{Versuch}
-	\end{textblock}
-	\begin{textblock}{12}[0,0](12.85,6.1)
-		\mytextfield{Fehlerrech.}{\fehlerrechnung}{1.46cm}{17pt}{Ja/Nein}{4}{Fehlerrechnung}
+	\begin{textblock}{12}[0,0](3.85,5.5)
+		\normalsize\mytextfield{Emailadressen}{fachschaft@physik.kit.edu}{13.41cm}{10pt}{Optional}{0}{Emailadressen}
 	\end{textblock}
 	
 	% Zeile 5
-	\begin{textblock}{12}[0,0](3.85,6.7)
+	\begin{textblock}{12}[0,0](3.85,6.45)
+		\mytextfield{Versuch}{\versuch\ (\praktikum-\versuchsnr)}{9.45cm}{14pt}{z.B. \glqq Galvanometer (P1-13)\grqq\ oder \glqq Mikrowellenoptik (P2-15)\grqq}{0}{Versuch}
+	\end{textblock}
+	\begin{textblock}{12}[0,0](12.85,6.45)
+		\mytextfield{Fehlerrech.}{\fehlerrechnung}{1.46cm}{17pt}{Ja/Nein}{4}{Fehlerrechnung}
+	\end{textblock}
+	
+	% Zeile 6
+	\begin{textblock}{12}[0,0](3.85,7)
 		\mytextfield{Betreuer}{\betreuer}{7cm}{17pt}{}{0}{Betreuer}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](11.09,6.7)
+	\begin{textblock}{12}[0,0](11.09,7)
 		\mytextfield{Durchgeführt am}{\durchgefuehrt}{2.53cm}{17pt}{TT.MM.JJ}{8}{Durchfuehrung}
 	\end{textblock}
 	
 	%querstrich
-	\begin{textblock}{20}[0,0](0,7.65)\tiny\centering
+	\begin{textblock}{20}[0,0](0,7.9)\tiny\centering
 		Wird vom Betreuer ausgefüllt.
 	\end{textblock}
 	\begin{tikzpicture}[overlay]
 	\draw[color=gray]
-			(\xone mm + 5 mm, -90 mm)
-	  -- (\xtwo mm + \diameter pt - 5 mm, -90 mm);
+			(\xone mm + 5 mm, -95 mm)
+	  -- (\xtwo mm + \diameter pt - 5 mm, -95 mm);
 	\end{tikzpicture}
 	
 	% Zeile 1
-	\begin{textblock}{12}[0,0](3.85,8.1)
+	\begin{textblock}{12}[0,0](3.85,8.27)
 		\myTtextfield{1. Abgabe am}{}{2.5cm}{17pt}{}
 	\end{textblock}
 	
 	% Block 1
 	\begin{tikzpicture}[overlay]
 	\draw[color=gray]  
-			(\xone mm + 10 mm, -105 mm)
-	  -- (\xtwo mm + \diameter pt - 10 mm, -105 mm)
-	  -- (\xtwo mm + \diameter pt - 10 mm, -105 mm - \hoehea mm)
-	  -- (\xone mm + 10 mm, -105 mm - \hoehea mm)
-	  -- (\xone mm + 10 mm, -105 mm);
+			(\xone mm + 10 mm, -107.5 mm)
+	  -- (\xtwo mm + \diameter pt - 10 mm, -107.5 mm)
+	  -- (\xtwo mm + \diameter pt - 10 mm, -107.5 mm - \hoehea mm)
+	  -- (\xone mm + 10 mm, -107.5 mm - \hoehea mm)
+	  -- (\xone mm + 10 mm, -107.5 mm);
 	\end{tikzpicture}
-	\begin{textblock}{12}[0,0](4,8.9)
+	\begin{textblock}{12}[0,0](4,9)
 		\myTtextfield{Rückgabe am}{}{2.5cm}{17pt}{}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](8.6,9)
+	\begin{textblock}{12}[0,0](8.6,9.1)
 		Begründung:
 	\end{textblock}
 	
 	% Zeile 2
-	\begin{textblock}{12}[0,0](3.85,12.25)
+	\begin{textblock}{12}[0,0](3.85,12.3)
 		\myTtextfield{2. Abgabe am}{}{2.5cm}{17pt}{}
 	\end{textblock}
 	
