Added email adress option to data.tex.

--- a/data.tex
+++ b/data.tex
@@ -12,6 +12,8 @@
 \newcommand{\nachnameb}{Fall}		% Nachname des zweiten Praktikanten
 \newcommand{\vornameb}{Klara}		% Vorname des zweiten Praktikanten
 
+\newcommand{\emailadressen}{latexvorlage@fachschaft.physik.kit.edu} % optionale Angabe von Emailadresse(n) für den Kontakt mit dem Betreuer
+
 \newcommand{\versuch}{Absorption radioaktiver Strahlung}	% Name des Versuchs
 \newcommand{\versuchsnr}{80}		% bitte die korrekte Nummer dem Arbeitsplatz am Versuchstag entnehmen
 \newcommand{\fehlerrechnung}{Nein}	% Ob Fehlerrechnung im Versuch durchgeführt wurde oder nicht
