--- a/include/titlepage.tex
+++ b/include/titlepage.tex
@@ -76,7 +76,7 @@
 	
 	% Zeile 4
 	\begin{textblock}{12}[0,0](3.85,5.5)
-		\normalsize\mytextfield{Emailadressen}{fachschaft@physik.kit.edu}{13.41cm}{10pt}{Optional}{0}{Emailadressen}
+		\normalsize\mytextfield{Emailadresse(n)}{\emailadressen}{13.41cm}{10pt}{Optional}{0}{Emailadressen}
 	\end{textblock}
 	
 	% Zeile 5
