Changed some options concerning the ToC and its hyperlinks.
(cherry picked from commit a6b93e921bca1b202dfcdc30dfd2ce76948dc377)

Conflicts:
	deckblatt.pdf
	main.pdf
	main.tex

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -372,7 +372,7 @@
 
 \newcommand{\emptychapter}[2]
 {
-	\clearpage\addtocounter{chapter}{1}\addtocontents{toc}{\protect\contentsline {chapter}{\protect\numberline {\thechapter}#1}{#2}{chapter.\thechapter}}
+	\clearpage\addtocounter{chapter}{1}\addtocontents{toc}{\protect\contentsline {chapter}{\protect\numberline {\thechapter}#1}{#2}{}}
 }
 
 
