--- a/include/titlepage.tex
+++ b/include/titlepage.tex
@@ -45,53 +45,53 @@
 	
 	\Large
 	% Zeile 1
-	\begin{textblock}{12}[0,0](3.85,3.85)
+	\begin{textblock}{12}[0,0](3.58,4.25)
 		\mytextfield{Prak.}{\praktikum}{0.9cm}{17pt}{P1/P2}{2}{Praktikum}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](5.8,3.85)
+	\begin{textblock}{12}[0,0](5.53,4.25)
 		\mytextfield{Semester}{\semester}{2.6cm}{17pt}{z.B. \glqq WS14/15\grqq\ oder \glqq SS15\grqq}{0}{Semester}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.8,3.85)
+	\begin{textblock}{12}[0,0](9.53,4.25)
 		\mytextfield{Wochentag}{\wochentag}{1.3cm}{17pt}{Mo/Di/Mi/Do}{2}{Wochentag}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](13.15,3.85)
+	\begin{textblock}{12}[0,0](12.88,4.25)
 		\mytextfield{Gruppennr.}{\gruppennr}{1.06cm}{17pt}{\#\#}{2}{Gruppennummer}
 	\end{textblock}
 	
 	% Zeile 2
-	\begin{textblock}{12}[0,0](3.85,4.4)
+	\begin{textblock}{12}[0,0](3.58,4.8)
 		\mytextfield{Name}{\nachnamea}{6cm}{17pt}{}{0}{Name1}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.8,4.4)
+	\begin{textblock}{12}[0,0](9.53,4.8)
 		\mytextfield{Vorname}{\vornamea}{6cm}{17pt}{}{0}{Vorname1}
 	\end{textblock}
 	
 	% Zeile 3
-	\begin{textblock}{12}[0,0](3.85,4.95)
+	\begin{textblock}{12}[0,0](3.58,5.35)
 		\mytextfield{Name}{\nachnameb}{6cm}{17pt}{}{0}{Name2}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.8,4.95)
+	\begin{textblock}{12}[0,0](9.53,5.35)
 		\mytextfield{Vorname}{\vornameb}{6cm}{17pt}{}{0}{Vorname2}
 	\end{textblock}
 	
 	% Zeile 4
-	\begin{textblock}{12}[0,0](3.85,5.5)
-		\normalsize\mytextfield{Emailadresse(n)}{\emailadressen}{13.41cm}{10pt}{Optional}{0}{Emailadressen}
+	\begin{textblock}{12}[0,0](3.64,5.9)
+		\normalsize\mytextfield{Emailadresse(n)}{\emailadressen}{13.15cm}{10pt}{Optional}{0}{Emailadressen}
 	\end{textblock}
 	
 	% Zeile 5
-	\begin{textblock}{12}[0,0](3.85,6.45)
+	\begin{textblock}{12}[0,0](3.58,6.85)
 		\mytextfield{Versuch}{\versuch\ (\praktikum-\versuchsnr)}{9.45cm}{14pt}{z.B. \glqq Galvanometer (P1-13)\grqq\ oder \glqq Mikrowellenoptik (P2-15)\grqq}{0}{Versuch}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](12.85,6.45)
+	\begin{textblock}{12}[0,0](12.58,6.85)
 		\mytextfield{Fehlerrech.}{\fehlerrechnung}{1.46cm}{17pt}{Ja/Nein}{4}{Fehlerrechnung}
 	\end{textblock}
 	
 	% Zeile 6
-	\begin{textblock}{12}[0,0](3.85,7)
+	\begin{textblock}{12}[0,0](3.58,7.4)
 		\mytextfield{Betreuer}{\betreuer}{7cm}{17pt}{}{0}{Betreuer}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](11.09,7)
+	\begin{textblock}{12}[0,0](10.82,7.4)
 		\mytextfield{Durchgeführt am}{\durchgefuehrt}{2.53cm}{17pt}{TT.MM.JJ}{8}{Durchfuehrung}
 	\end{textblock}
 	
@@ -106,7 +106,7 @@
 	\end{tikzpicture}
 	
 	% Zeile 1
-	\begin{textblock}{12}[0,0](3.85,8.27)
+	\begin{textblock}{12}[0,0](3.65,8.57)
 		\myTtextfield{1. Abgabe am}{}{2.5cm}{17pt}{}
 	\end{textblock}
 	
@@ -119,15 +119,15 @@
 	  -- (\xone mm + 10 mm, -107.5 mm - \hoehea mm)
 	  -- (\xone mm + 10 mm, -107.5 mm);
 	\end{tikzpicture}
-	\begin{textblock}{12}[0,0](4,9)
+	\begin{textblock}{20}[0,0](3.8,9.2)
 		\myTtextfield{Rückgabe am}{}{2.5cm}{17pt}{}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](8.6,9.1)
-		Begründung:
+	\begin{textblock}{20}[0,0](8.7,9.2)
+		\smash{Begründung:}
 	\end{textblock}
 	
 	% Zeile 2
-	\begin{textblock}{12}[0,0](3.85,12.3)
+	\begin{textblock}{12}[0,0](3.65,12.6)
 		\myTtextfield{2. Abgabe am}{}{2.5cm}{17pt}{}
 	\end{textblock}
 	
@@ -140,20 +140,20 @@
 	  -- (\xone mm + 10 mm, -180 mm - \hoehea mm)
 	  -- (\xone mm + 10 mm, -180 mm);
 	\end{tikzpicture}
-	\begin{textblock}{12}[0,0](4,13.2)
-		Ergebnis:~~~~+~~~/~~~0~~~/~~~-
+	\begin{textblock}{12}[0,0](4,13.25)
+		\smash{Ergebnis:~~~~+~~~/~~~0~~~/~~~-}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](9.5,13.2)
-		Fehlerrechnung:~~~Ja~~~/~~~Nein
+	\begin{textblock}{12}[0,0](9.5,13.25)
+		\smash{Fehlerrechnung:~~~Ja~~~/~~~Nein}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](4,13.6)
+	\begin{textblock}{12}[0,0](3.8,13.72)
 		\myTtextfield{Datum}{}{2.5cm}{17pt}{}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](8.5,13.6)
+	\begin{textblock}{12}[0,0](8.3,13.72)
 		\myTtextfield{Handzeichen}{}{5.5cm}{17pt}{}
 	\end{textblock}
-	\begin{textblock}{12}[0,0](4,14.2)\Large
-		Bemerkungen:
+	\begin{textblock}{12}[0,0](4,14.25)\Large
+		\smash{Bemerkungen:}
 	\end{textblock}
 	
 	
