Used tocbibind package to display the bibliography in toc.
(cherry picked from commit 3e5866600e7190ed5423fe3ef7e5fe3091db88dd)

Conflicts:
	main.pdf

--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -57,6 +57,8 @@
 \usepackage{fancyhdr}				% Define simple page headings (is used below).
 \usepackage{placeins}				% To use \FloatBarrier
 
+\usepackage[nottoc,notlot,notlof]{tocbibind}	% So that the Bibliography will be added to the ToC
+
 \usepackage{varioref}				% Intelligent page references. Provides \vref and \vpageref
 
 \usepackage{booktabs}
