--- a/main.tex
+++ b/main.tex
@@ -30,12 +30,12 @@
 % Describe separation hints here:
 \hyphenation{
 über-nom-me-nen an-ge-ge-be-nen
-% Pro-to-koll-in-stan-zen
-% Ma-na-ge-ment  Netz-werk-ele-men-ten
-% Netz-werk Netz-werk-re-ser-vie-rung
-% Netz-werk-adap-ter Fein-ju-stier-ung
-% Da-ten-strom-spe-zi-fi-ka-tion Pa-ket-rumpf
-% Kon-troll-in-stanz
+%Pro-to-koll-in-stan-zen
+%Ma-na-ge-ment  Netz-werk-ele-men-ten
+%Netz-werk Netz-werk-re-ser-vie-rung
+%Netz-werk-adap-ter Fein-ju-stier-ung
+%Da-ten-strom-spe-zi-fi-ka-tion Pa-ket-rumpf
+%Kon-troll-in-stanz
 }
 
 
@@ -107,8 +107,6 @@
 	
 	% BibTeX
 	\TheBibliography
-	\chapter*{\bibname} \addcontentsline{toc}{chapter}{\bibname} % \bibname = Bibliography oder Literaturverzeichnis
-	\begingroup \newcommand{\relaxxx}[2]{} \let\chapter\relaxxx % in order to avoid the definition of an extra chapter
 	
 	%%% BIBTEX
 	% Use if you want citations to appear even if they are not referenced to: \nocite{*} or maybe \nocite{Kon64,And59} for specific entries
@@ -121,5 +119,5 @@
 	%	\bibitem{ident}Eintrag ins Literaturverzeichnis
 	%\end{thebibliography}
 	
-	\endgroup
+	%\endgroup
 \end{document}
