--- a/include/cmds.tex
+++ b/include/cmds.tex
@@ -3,7 +3,7 @@
 %\newcommand{\celsius}{{}^\circ C} % already defined in siunitx package
 %\newcommand{\angstrom}{\mathring{A}} % already defined in siunitx package
 \renewcommand{\d}{\ensuremath{\text{d}}}
-\renewcommand{\vec}[1]{\boldsymbol{#1}}
+%\renewcommand{\vec}[1]{\boldsymbol{#1}}
 
 \newcommand{\op}[1]{\operatorname{#1}} % just an abbrev.
 \newcommand{\NN}{\mathbb{N}} % or change it to \mathbb if you like it better
