new command xcaption
xcaption is used for detailed figure or table description including title appearing in tables of figure/table.

--- a/include/cmds.tex
+++ b/include/cmds.tex
@@ -13,7 +13,7 @@
 %\newcommand{\RR}{\mathbbm{R}}
 %\newcommand{\CC}{\mathbbm{C}}
 
-
+\newcommand{\xcaption}[2]{\caption[#1]{\textbf{#1:} #2}}
 
 
 
