--- a/include/protokollclass.cls
+++ b/include/protokollclass.cls
@@ -25,88 +25,96 @@
 
 
 
-%% -------------------------------
-%% |          Packages           |
-%% -------------------------------
-\usepackage[utf8]{inputenc}			% for using utf8 characters (äöüß)
-\usepackage[T1]{fontenc}			% for correct font encoding (you can't search for non-ascii chars in pdf otherwise)
-\usepackage{lmodern}				% the font used by T1 font encoding
-\usepackage[	protrusion=true, expansion,
-		tracking, kerning,
-		spacing]{microtype}		% microtype writing style. 
-\microtypecontext{spacing=nonfrench}		% option for scrbook to allow for microtype->nonfrenchspacing
-						% for info on nonfrenchspacing: en.wikipedia.org/wiki/History_of_sentence_spacing#French_and_English_spacing
+%% ------------------
+%% |    Packages    |
+%% ------------------
+\usepackage[utf8]{inputenc}				% for using utf8 characters (äöüß)
+\usepackage[T1]{fontenc}				% for correct font encoding (you can't search for non-ascii chars in pdf otherwise)
+\usepackage{lmodern}					% the font used by T1 font encoding
+\usepackage[protrusion=true,			% microtype package for better line breaks, kerning, etc.
+			expansion,
+			tracking,
+			kerning,
+			spacing]{microtype}
+\microtypecontext{spacing=nonfrench}	% option for scrbook to allow for microtype->nonfrenchspacing
+										% for info on nonfrenchspacing:
+										% en.wikipedia.org/wiki/History_of_sentence_spacing#French_and_English_spacing
 
 \usepackage[english,ngerman]{babel}		% babel language styles. you may add languages, if need to be.
 \usepackage[fixlanguage]{babelbib}		% use babel bibtex. fixlanguage = don't switch language between bib items
-%\usepackage{cite}				% if you prefer bibtex without babel
+%\usepackage{cite}						% if you prefer bibtex without babel
 
-\usepackage{amsmath}				% lots of math packages
-\usepackage{amssymb}				% ... even more math packages
-%\usepackage{mathtools}				% ...
-%\usepackage{bbm}				% blackboard style fonts. You may prefer the provided \mathbbm{R} to ordinary \mathbb{R}.
-\usepackage{upgreek}				% use $\uppi$ etc.
-\usepackage{nicefrac}				% use \nicefrac{1}{2} for inline text, if you want
+\usepackage{amsmath}					% lots of math packages
+\usepackage{amssymb}					% ... even more math packages
+%\usepackage{mathtools}					% ...
+%\usepackage{bbm}						% blackboard style fonts. You may prefer the provided \mathbbm{R} to ordinary \mathbb{R}.
+\usepackage{upgreek}					% use $\uppi$ etc.
+\usepackage{nicefrac}					% use \nicefrac{1}{2} for inline text, if you want
 \usepackage[load-configurations=abbreviations]
-{siunitx}					% package for units. Use \si{\ampere} or \SI{0.3}{\angstrom}.
-\sisetup{per-mode=fraction}			% style of writing units
+{siunitx}								% package for units. Use \si{\ampere} or \SI{0.3}{\angstrom}.
+\sisetup{per-mode=fraction}				% style of writing units
 \sisetup{separate-uncertainty=true}		% to allow for $\pm ...$ as uncertainty instead of 0.34(12)
 \usepackage[version=3]{mhchem}			% to nicely write chemcial elements (e.g. \ce{^{227}_{90}Th+})
 
-\usepackage{vmargin}				% Adjust margins in a simple way (is used below).
-\usepackage{fancyhdr}				% Define simple page headings (is used below).
-\usepackage{placeins}				% To use \FloatBarrier
+\usepackage{vmargin}					% Adjust margins in a simple way (is used below).
+\usepackage{fancyhdr}					% Define simple page headings (is used below).
+\usepackage{placeins}					% To use \FloatBarrier
 
-\usepackage[nottoc,notlot,notlof]{tocbibind}	% So that the Bibliography will be added to the ToC
+\usepackage[nottoc,						% So that the Bibliography will be added to the ToC
+			notlot,
+			notlof]{tocbibind}
 
-\usepackage{varioref}				% Intelligent page references. Provides \vref and \vpageref
+\usepackage{varioref}					% Intelligent page references. Provides \vref and \vpageref
 
 \usepackage{booktabs}
-\usepackage[table]{xcolor}			% used for some coloring commands. table option for beautiful colored tables.
-\definecolor{kitcolor}{rgb}{0 0.61 0.50}	% color is defined here and later used for several definitions
+\usepackage[table]{xcolor}				% used for some coloring commands. table option for beautiful colored tables.
+\definecolor{kitcolor}{rgb}{0 0.61 0.50}% color is defined here and later used for several definitions
 
 \usepackage[pdftex]{graphicx}			% including images
-\usepackage[	normal,
-		font={small,color=black},
-		labelfont=bf,
-		margin=2em]{caption}		% create graphics/tabular captions
-\usepackage{subcaption}				% create subcaptions for subpictures
+\usepackage[normal,
+			font={small,color=black},
+			labelfont=bf,
+			margin=2em]{caption}		% create graphics/tabular captions
+\usepackage{subcaption}					% create subcaptions for subpictures
 
-\usepackage[absolute,overlay]{textpos}		% used for titlepage
-\usepackage{tikz}				% used for titlepage, but may be useful for other stuff, too.
-\usepackage{ifthen}				% for some control sequences in this class
+\usepackage[absolute,overlay]{textpos}	% used for titlepage
+\usepackage{tikz}						% used for titlepage, but may be useful for other stuff, too.
+\usepackage{ifthen}						% for some control sequences in this class
 \usepackage[fit,breakall]{truncate}		% used for creating textfields on titlepage
-\usepackage{etoolbox}				% necessary to update page numbering for different chapters
-\usepackage{xstring}				% used for creating substring out of \appendixname
-\usepackage{multicol}				% used for titlepage. Usefull for other stuff, too.
+\usepackage{etoolbox}					% necessary to update page numbering for different chapters
+\usepackage{xstring}					% used for creating substring out of \appendixname
+\usepackage{multicol}					% used for titlepage. Usefull for other stuff, too.
 
 \DeclareGraphicsRule{*}{mps}{*}{}		% enables compiling images with pdf-latex
-\DeclareGraphicsExtensions{.eps,.pdf,.png,.jpg,.jpeg,.mps} % different image extensions used
-\usepackage{epstopdf}				% may be necessary for miktex to convert eps to pdf figures
+\DeclareGraphicsExtensions{.eps,		% different image extensions used
+							.pdf,
+							.png,
+							.jpg,
+							.jpeg,
+							.mps}
+\usepackage{epstopdf}					% may be necessary for miktex to convert eps to pdf figures
 
-\usepackage[	raiselinks=true,
-		bookmarks=true,
-		bookmarksopenlevel=1,
-		bookmarksopen=true,
-		bookmarksnumbered=true,
-		hyperindex=true,
-		plainpages=false,
-		pdfpagelabels=true,
-		pdfborder={0 0 0.5},
-		colorlinks=false,	
-		linkbordercolor=kitcolor,   
-		citebordercolor=kitcolor]{hyperref}	% enables hyperlinks in document. also includes url package for \url{...}
+\usepackage[	raiselinks=true,		% package enables hyperlinks in document
+				bookmarks=true,			% hyperref also includes url package for \url{...}
+				bookmarksopenlevel=1,
+				bookmarksopen=true,
+				bookmarksnumbered=true,
+				hyperindex=true,
+				plainpages=false,
+				pdfpagelabels=true,
+				pdfborder={0 0 0.5},
+				colorlinks=false,
+				linkbordercolor=kitcolor,
+				citebordercolor=kitcolor]{hyperref}
 
 
 
 
 
-%% -------------------------------
-%% |        Declarations         |
-%% -------------------------------
+%% ----------------------
+%% |    Declarations    |
+%% ----------------------
 \input{include/cmds}
-\newcommand{\blankpage}{\clearpage{\pagestyle{empty}\cleardoublepage}}
-
 \input{data}
 \newcommand{\namea}{\vornamea\ \nachnamea}
 \newcommand{\nameb}{\vornameb\ \nachnameb}
@@ -116,9 +124,9 @@
 
 
 
-%% -------------------------------
-%% |         PDF - Setup         |
-%% -------------------------------
+%% ---------------------
+%% |    PDF - Setup    |
+%% ---------------------
 %% This information will appear embed into the PDF file, but will not be printed anywhere
 \hypersetup
 {
@@ -132,42 +140,46 @@
 
 
 
-%% -------------------------------
-%% |      Globale Settings       |
-%% -------------------------------
+%% --------------------------
+%% |    Globale Settings    |
+%% --------------------------
 \setcounter{secnumdepth}{3}				% Numbering also for \subsubsections
 \setcounter{tocdepth}{3}				% Register \subsubsections in content directory
 
 \setpapersize{A4}
-\setmarginsrb{3cm}{1cm}{3cm}{1cm}{6mm}{7mm}{5mm}{15mm}	%{leftmargin}{topmargin}{rightmargin}{bottommargin}{headheight}{headsep}{footheight}{footskip}
-\setlength{\marginparwidth}{1.5cm}			% for todos to be positioned correctly
+\setmarginsrb{3cm}{1cm}{3cm}{1cm}		%{leftmargin}{topmargin}{rightmargin}{bottommargin}...
+{6mm}{7mm}{5mm}{15mm}					%...{headheight}{headsep}{footheight}{footskip}
 
-\parindent 0cm                    			% Do not indent beginning of paragraph
-\parskip 1.5ex plus0.5ex minus0.5ex			% Margin between paragraphs
+\setlength{\marginparwidth}{1.5cm}		% for todos to be positioned correctly
+
+\parindent 0cm                    		% Do not indent beginning of paragraph
+\parskip 1.5ex plus0.5ex minus0.5ex		% Margin between paragraphs
+
+\newcommand{\blankpage}{\clearpage{\pagestyle{empty}\cleardoublepage}}
 
 
 
 
 
-%% -----------------------------
-%% |      Language Setup       |
-%% -----------------------------
+%% ------------------------
+%% |    Language Setup    |
+%% ------------------------
 \newcommand{\SelectLanguage}[1]
 {
 	\AtBeginDocument
 	{
-		\selectlanguage{#1}
-		
-		\iflanguage{ngerman}					% sets , for German and . otherwise
+		\selectlanguage{#1}							% babel command
+
+		\iflanguage{ngerman}						% sets , for German and . otherwise
 		{
 			\sisetup{output-decimal-marker={,}}
-			\sisetup{list-final-separator={ und }}		% "3, 4 and 5" in English or "3, 4 und 5" in German
+			\sisetup{list-final-separator={ und }}	% "3, 4 and 5" in English or "3, 4 und 5" in German
 			\sisetup{range-phrase={ bis }}			% "1.5 to 1.8" in English or "1,5 bis 1,8" in German
-			
+
 		}
 		{
 			\sisetup{output-decimal-marker=.}
-			\sisetup{list-final-separator={ and }}		% "3, 4 and 5" in English or "3, 4 und 5" in German
+			\sisetup{list-final-separator={ and }}	% "3, 4 and 5" in English or "3, 4 und 5" in German
 			\sisetup{range-phrase={ to }}			% "1.5 to 1.8" in English or "1,5 bis 1,8" in German
 		}
 	}
@@ -177,9 +189,9 @@
 
 
 
-%% -------------------------------
-%% |      Style of captions      |
-%% -------------------------------
+%% ---------------------------
+%% |    Style of captions    |
+%% ---------------------------
 \newcommand{\changefont}[3]{\fontfamily{#1} \fontseries{#2} \fontshape{#3} \selectfont}
 \newcommand{\chapterheadfont}{}
 
@@ -187,40 +199,40 @@
 
 \renewcommand{\section}{%
 \@startsection{section}%
-{1}		% Structure level
-{0mm}	% Indention
-{2ex plus 1ex minus 1ex}			% Pre-Margin
-{0.5ex plus 0.5ex minus 0.5ex}		% Post-Margin
-{\chapterheadfont\large\bfseries}	% Style
+{1}										% Structure level
+{0mm}									% Indention
+{2ex plus 1ex minus 1ex}				% Pre-Margin
+{0.5ex plus 0.5ex minus 0.5ex}			% Post-Margin
+{\chapterheadfont\large\bfseries}		% Style
 }
 \renewcommand{\subsection}{%
 \@startsection{subsection}%
-{2}		% Structure level
-{0mm}	% Indention
-{1.5ex plus 1ex minus 0.5ex}		% Pre-Margin
-{0.3ex plus 0.3ex minus 0.3ex}		% Post-Margin
-{\chapterheadfont\large\bfseries}	% Style
+{2}										% Structure level
+{0mm}									% Indention
+{1.5ex plus 1ex minus 0.5ex}			% Pre-Margin
+{0.3ex plus 0.3ex minus 0.3ex}			% Post-Margin
+{\chapterheadfont\large\bfseries}		% Style
 }
 \renewcommand{\subsubsection}{%
 \@startsection{subsubsection}%
-{3}		% Structure level
-{0mm}	% Indention
+{3}										% Structure level
+{0mm}									% Indention
 {1.5ex plus 1ex minus 0.5ex}			% Pre-Margin
 {0.2ex plus 0.2ex minus 0.2ex}			% Post-Margin
 {\chapterheadfont\normalsize\bfseries}	% Style
 }
 \renewcommand{\paragraph}{%
 \@startsection{paragraph}%
-{4}		% Structure level
-{0mm}	% Indention
+{4}										% Structure level
+{0mm}									% Indention
 {1.3ex plus 1ex minus 0.3ex}			% Pre-Margin
 {0.2ex plus 0.2ex minus 0.2ex}			% Post-Margin
 {\chapterheadfont\normalsize\bfseries}	% Style
 }
 \renewcommand{\subparagraph}{%
 \@startsection{subparagraph}%
-{5}		% Structure level
-{0mm}	% Indention
+{5}										% Structure level
+{0mm}									% Indention
 {1ex plus 1ex minus 0.2ex}				% Pre-Margin
 {0.1ex plus 0.1ex minus 0.1ex}			% Post-Margin
 {\chapterheadfont\normalsize\bfseries}	% Style
@@ -230,9 +242,9 @@
 
 
 
-%% ---------------------------------
-%% |   Style of chapter captions   |
-%% ---------------------------------
+%% -----------------------------------
+%% |    Style of chapter captions    |
+%% -----------------------------------
 \newlength{\chapnolen}
 \newlength{\chapparlen}
 \newsavebox{\chapno}
@@ -270,9 +282,9 @@
 
 
 
-%% ---------------------------------
-%% |  Style of content directory   |
-%% ---------------------------------
+%% ------------------------------------
+%% |    Style of content directory    |
+%% ------------------------------------
 \let\oldtableofcontents\tableofcontents
 \renewcommand{\tableofcontents}{{\pdfbookmark{\contentsname}{\contentsname}\chapterheadfont\oldtableofcontents}}
 \let\@olddottedtocline\@dottedtocline
@@ -282,9 +294,9 @@
 
 
 
-%% ----------------------------------------
-%% |   Style of appendix and mainmatter   |
-%% ----------------------------------------
+%% ------------------------------------------
+%% |    Style of appendix and mainmatter    |
+%% ------------------------------------------
 \newboolean{chapWiseNumb}
 \setboolean{chapWiseNumb}{true}
 
@@ -294,9 +306,9 @@
 \newcommand{\FrontMatter}
 {
 	\frontmatter
-	
+
 	\pagestyle{empty}
-	
+
 	\fancypagestyle{plain} % to ensure that toc page style is really empty (it uses \thispagestyle{plain})
 	{
 		\fancyhf{} % clear all header and footer fields
@@ -309,14 +321,14 @@
 \newcommand{\MainMatter}
 {
 	\clearpage
-	
+
 	\begingroup % make sure that there is no involuntary blankpage added after toc.
 	\let\cleardoubleoddstandardpage\relax
 	\mainmatter
 	\endgroup
-	
+
 	\frontmatter \pagestyle{empty}
-	
+
 	\fancypagestyle{plain} % redefine chapter first page style, which is redefined by \FrontMatter
 	{
 		\fancyhf{} % clear all header and footer fields
@@ -324,7 +336,7 @@
 		\renewcommand{\headrulewidth}{0pt}
 		\renewcommand{\footrulewidth}{0pt}
 	}
-	
+
 	\mainmatter
 	\pagestyle{fancy}
 	\renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter.\ ##1}{}}
@@ -334,7 +346,7 @@
 	{
 		\renewcommand{\thepage}{\arabic{chapter}-\arabic{page}}
 	}{}
-	
+
 	\ifthenelse{\boolean{chapResetPageNumb}}
 	{
 		\pretocmd{\chapter}{\clearpage\setcounter{page}{1}}{}{}
@@ -382,19 +394,19 @@
 
 
 
-%% -------------------------------------
-%% |     Textfields for Titlepage      |
-%% -------------------------------------
-\newboolean{forminput}			% um die Titelseite per PDF-reader auszufüllen.
+%% ----------------------------------
+%% |    Textfields for Titlepage    |
+%% ----------------------------------
+\newboolean{forminput}					% um die Titelseite per PDF-reader auszufüllen.
 \setboolean{forminput}{false}
 
-\newboolean{showannotations}		% um die Anmerkungen zu den Textfeldern anzeigen zu lassen.
+\newboolean{showannotations}			% um die Anmerkungen zu den Textfeldern anzeigen zu lassen.
 \setboolean{showannotations}{false}
 
-\newboolean{emptytextfields}		% um Seitenzahl in jedem Kapitel zu erneuern.
+\newboolean{emptytextfields}			% um Seitenzahl in jedem Kapitel zu erneuern.
 \setboolean{emptytextfields}{false}
 
-\newcommand{\myFtextfield}[7]		% ausfüllbares TextFeld
+\newcommand{\myFtextfield}[7]			% ausfüllbares TextFeld
 {
 	\smash{
 	\begin{Form}
@@ -441,4 +453,6 @@
 		\newcommand{\mytextfield}[7]{\myTtextfield{#1}{#2}{#3}{#4}{#5}}
 	}
 }
+
 %% **** END OF CLASS ****
+\endinput
